# HappyHackingTools.py_2022

./: .gitignore  CONTRIBUTING.md  README.md  app.py  hackingtools.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements2.txt  test.py  test.txt  tsconfig.json  vitest.config.ts
.claude/: CLAUDE.md  settings.json  settings.local.json
.serena/: project.yml
coverage/: clover.xml  coverage-final.json  index.html
docker_file/: Dockerfile  docker-compose.yml  requirements.txt
docs/: dependency-matrix.md
file/: arper.pcap
myenv/: pyvenv.cfg
notebooks/: birdclef2026-public-blend-4-model.ipynb  kernel-metadata.json
scripts/: setup-npcap-sdk.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: default.toml
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: arp_spoof.rs  binary.rs  ctf.rs  lan_scan.rs  mod.rs  network_info.rs  npcap.rs  port_scan.rs  web_check.rs
src-tauri/src/network/: arp.rs  arp_spoof.rs  interface.rs  lan_scan.rs  mod.rs  npcap.rs  packet.rs  port_scan.rs  vendor.rs  web_check.rs
src-tauri/src/utils/: binary.rs
templates/: arp_spoofing.html  binary.html  ctf.html  index.html  lanscan.html  portscan.html  result.html  send_packet.html
tests/: NpcapDialog.test.tsx  buildDelayLoadConsistency.test.mjs  buildRsConsistency.test.mjs  ciWorkflowConsistency.test.mjs  ctfFeatures.test.ts  ctfWorkbench.test.ts  ctfWriteup.test.ts  defaults.test.ts  npcapDefaults.test.ts  readmeConsistency.test.mjs  releaseWorkflowConsistency.test.mjs  repoCleanupConsistency.test.mjs  tauriInvokeArgs.test.tsx  test_build_rs.py  toolingConfigConsistency.test.mjs  useNpcapCheck.test.ts
(+253 files in other folders)
