[package]
name = "happyhacking-tools"
version = "0.1.0"
description = "HappyHackingTools - Network Security Toolkit"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "happyhacking_tools"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
pnet = "0.35"
pnet_datalink = "0.35"
dns-lookup = "2"
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
ipnetwork = "0.20"
default-net = "0.22"
directories = "6"
pcap = "2"
